test/shouldPass/simpleProcedure.pas
program Sample;

procedure foo();
begin
    writeln('Hello, World!');
end;

begin
    foo();
end.