test/shouldFail/returnInProcedure.pas
program Sample;

procedure foo();
begin
    foo := 42;
end;

begin
    foo();
end.